<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBc">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/radio_group">

        <RelativeLayout
            android:id="@+id/fragment_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/RadioButton_Style"
            android:checked="true"
            android:drawableTop="@drawable/rbutton_bg_home_selector"
            android:text="@string/it_home"
            android:textColor="@drawable/rbutton_bg_textcolor_selector"
            android:textSize="8dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_video"
            style="@style/RadioButton_Style"
            android:drawableTop="@drawable/rbutton_bg_video_selector"
            android:text="@string/it_video"
            android:textColor="@drawable/rbutton_bg_textcolor_selector"
            android:textSize="8dp"
            android:textStyle="bold" />

        <RadioButton
            style="@style/RadioButton_Style"
            android:drawableTop="@drawable/rbutton_bg_circle_selector"
            android:text="@string/it_circle"
            android:textColor="@drawable/rbutton_bg_textcolor_selector"
            android:textSize="8dp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <RadioButton
            android:id="@+id/rb_circle"
            style="@style/RadioButton_Style"
            android:drawableTop="@drawable/rbutton_bg_circle_selector"
            android:text="@string/it_circle"
            android:textColor="@drawable/rbutton_bg_textcolor_selector"
            android:textSize="8dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_me"
            style="@style/RadioButton_Style"
            android:drawableTop="@drawable/rbutton_bg_my_selector"
            android:text="@string/it_me"
            android:textColor="@drawable/rbutton_bg_textcolor_selector"
            android:textSize="8dp"
            android:textStyle="bold" />

    </RadioGroup>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:src="@mipmap/ic_add"
        app:borderWidth="0dp"
        app:fabSize="mini" />

</RelativeLayout>