<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorWhite"
        app:layout_collapseMode="pin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp">

            <TextView
                android:id="@+id/tv_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:text="@string/tv_cancle"
                android:textColor="@drawable/textview_color_selector2"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_issue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:text="@string/tv_issue"
                android:textColor="@drawable/textview_color_selector2"
                android:textSize="15dp"
                android:visibility="gone" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_gravity="center"
        android:background="@color/color_eeeeee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_dynamic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/et_hint3"
            android:lines="5"
            android:padding="10dp"
            android:textColorHint="@color/colorOther"
            android:textCursorDrawable="@null"
            android:textSize="15dp" />

        <Button
            android:id="@+id/bt_add_picture"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginLeft="6dp"
            android:background="@drawable/ic_add_picture" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>