<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:scrollbarThumbVertical="@android:color/transparent"
        android:scrollbars="vertical">


        <LinearLayout
            android:id="@+id/ly_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/iv_clean_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="320dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:src="@mipmap/ic_close" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@null"
                    android:drawableLeft="@mipmap/ic_my_register"
                    android:drawablePadding="10dp"
                    android:hint="@string/et_hint"
                    android:inputType="textVisiblePassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/colorOther"
                    android:textColorHint="@color/colorOther"
                    android:textCursorDrawable="@null"
                    android:textSize="15dp" />

                <ImageView
                    android:id="@+id/iv_clean_phone"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_clear"
                    android:visibility="gone" />


            </LinearLayout>

            <View
                android:layout_width="300dp"
                android:layout_height="1px"
                android:layout_gravity="center"
                android:background="@color/color_eeeeee" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@null"
                    android:drawableLeft="@mipmap/ic_lock_register"
                    android:drawablePadding="10dp"
                    android:hint="@string/et_hint2"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/colorOther"
                    android:textColorHint="@color/colorOther"
                    android:textCursorDrawable="@null"
                    android:textSize="15dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/iv_show_pwd"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:scaleType="centerInside"
                        android:src="@mipmap/pass_gone"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/clean_password"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:scaleType="centerInside"
                        android:src="@mipmap/ic_clear"
                        android:visibility="gone" />


                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="300dp"
                android:layout_height="1px"
                android:layout_gravity="center"
                android:background="@color/color_eeeeee" />


            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_fill_button"
                android:enabled="false"
                android:text="@string/bt_login"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />


            <Button
                android:id="@+id/bt_register"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_button"
                android:text="@string/bt_register"
                android:textColor="@color/color_d81e06"
                android:textColorHint="@color/colorOther"
                android:textSize="18sp" />


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_fogetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/tv_fogetPwd"
            android:textColor="@drawable/textview_color_selector"
            android:textSize="14dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color_eeeeee" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/tv_about"
            android:textColor="@color/colorOther"
            android:textSize="14dp" />
    </LinearLayout>


</RelativeLayout>